Добавлены стили для SeedsView

--- a/Bonfire/App.xaml
+++ b/Bonfire/App.xaml
@@ -10,7 +10,8 @@
                 <ResourceDictionary Source="Infrastructure/Commands/Commands.xaml"/>
                 <ResourceDictionary Source="Resources/Base/Brushes.xaml"/>
                 <ResourceDictionary Source="Templates/ModelMainView.xaml"/>
-                <ResourceDictionary Source="Templates/DataGridStyle.xaml"></ResourceDictionary>
+                <ResourceDictionary Source="Templates/DataGridStyle.xaml"/>
+                <ResourceDictionary Source="Templates/SeedsViewStyle.xaml"/>
             </ResourceDictionary.MergedDictionaries>
 
             <vm:ViewModelLocator x:Key="Locator"/>
