--- a/Bonfire/Templates/SeedsViewStyle.xaml
+++ b/Bonfire/Templates/SeedsViewStyle.xaml
@@ -17,7 +17,7 @@
     <Style x:Key="SeedsChoiceComboBoxStyle" TargetType="ComboBox">
         <Setter Property="HorizontalAlignment" Value="Left"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
-        <Setter Property="HorizontalContentAlignment" Value="Center"/>
+        <Setter Property="HorizontalContentAlignment" Value="Left"/>
         <Setter Property="Height" Value="30"/>
         <Setter Property="Width" Value="300"/>
         <Setter Property="StaysOpenOnEdit" Value="True"/>
@@ -25,7 +25,7 @@
     <Style x:Key="SeedsComboBoxStyle" TargetType="ComboBox">
         <Setter Property="HorizontalAlignment" Value="Left"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
-        <Setter Property="HorizontalContentAlignment" Value="Center"/>
+        <Setter Property="HorizontalContentAlignment" Value="Left"/>
         <Setter Property="Height" Value="25"/>
         <Setter Property="Width" Value="150"/>
         <Setter Property="FontSize" Value="12"/>
