Убран квадрат выделения ячейки DataGrid

--- a/Bonfire/Templates/DataGridStyle.xaml
+++ b/Bonfire/Templates/DataGridStyle.xaml
@@ -17,7 +17,19 @@
         <Setter Property="AlternatingRowBackground" Value="AliceBlue"/>
         <Setter Property="HeadersVisibility" Value="Column"/>
         <Setter Property="HorizontalContentAlignment" Value="Center"/>
+        <Setter Property="CellStyle">
+
+            <Setter.Value>
+                <Style TargetType="DataGridCell">
+                    <Setter Property="BorderThickness" Value="0"/>
+                    
+                </Style>
+            </Setter.Value>
+        </Setter>
+
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+
     </Style>
     
-    
+        
 </ResourceDictionary>
