--- a/Bonfire/Views/LibraryEditorWindow.xaml
+++ b/Bonfire/Views/LibraryEditorWindow.xaml
@@ -12,7 +12,7 @@
              xmlns:system="clr-namespace:System;assembly=System.Runtime"
              d:DataContext="{d:DesignInstance {x:Type vm:LibraryEditorViewModel}}"
              d:DesignHeight="1080" d:DesignWidth="1920">
-    <Grid Margin="10">
+    <Grid Margin="10" >
 
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
@@ -31,14 +31,53 @@
 
 
         
-        <DataGrid Grid.Column="0" Grid.Row="0" AutoGenerateColumns="False" DataContext="{Binding Sort}" ItemsSource="{Binding}"
-                  ColumnHeaderStyle="{StaticResource CenterGridHeaderStyle}" Margin="15">
+        <DataGrid Grid.Column="0" Grid.Row="0" AutoGenerateColumns="False"  ItemsSource="{Binding Sort}"
+                  ColumnHeaderStyle="{StaticResource CenterGridHeaderStyle}" Margin="15" 
+                  SelectedItem="{Binding SelectedSort}">
             <DataGrid.Columns>
-                <DataGridTextColumn  Binding="{Binding Name}" Width="*">
-                    <DataGridTextColumn.Header>
+                <DataGridTemplateColumn Width="*">
+                    <DataGridTemplateColumn.Header>
                         <TextBlock Text="Библиотека сортов" Style="{StaticResource LibraryTextBlockStyle}"/>
-                    </DataGridTextColumn.Header>
-                </DataGridTextColumn>
+                    </DataGridTemplateColumn.Header>
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate DataType="{x:Type m:SortFromViewModel}">
+                            <TextBlock Text="{Binding Name}"></TextBlock>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                    
+                    <DataGridTemplateColumn.CellEditingTemplate>
+                        <DataTemplate>
+                            <Grid Background="White">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition></ColumnDefinition>
+                                    <ColumnDefinition  Width="75"></ColumnDefinition>
+                                </Grid.ColumnDefinitions>
+                                <TextBox Grid.Column="0" Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+                                <Button Grid.Column="1" Width="24" Background="Transparent" BorderBrush="Transparent" HorizontalAlignment="Right" Margin="0,0,40,0"
+                                        VerticalAlignment="Stretch" ToolTip="Подтвердить" 
+                                        Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}, Path=DataContext.UpdateSortNameCommand}">
+                                    <Button.Content>
+                                        <StackPanel Orientation="Horizontal">
+                                            <fa5:ImageAwesome Icon="Regular_CheckSquare" Height="20"  Margin="0, 0,5,0" Foreground="Green"/>
+                                        </StackPanel>
+                                    </Button.Content>
+                                </Button>
+                                <Button Grid.Column="1"  Width="27" Background="Transparent" BorderBrush="Transparent" HorizontalAlignment="Right"
+                                        Margin="0,0,10,0" ToolTip="Отменить">
+                                    <Button.Content>
+                                        <StackPanel Orientation="Horizontal">
+                                            <fa5:ImageAwesome Icon="Regular_WindowClose" Height="20"  Margin="0, 0,0,0" Foreground="Red"/>
+                                        </StackPanel>
+                                    </Button.Content>
+                                </Button>
+
+                            </Grid>
+                        </DataTemplate>
+
+                    </DataGridTemplateColumn.CellEditingTemplate>
+
+
+                </DataGridTemplateColumn>
             </DataGrid.Columns>
         </DataGrid>
 
@@ -47,9 +86,11 @@
                   ColumnHeaderStyle="{StaticResource CenterGridHeaderStyle}" Margin="15">
             <DataGrid.Columns>
                
-                <DataGridTextColumn Binding="{Binding Name}" Width="*">
-                    <DataGridTextColumn.Header>
-                        <TextBlock Text="Библиотека культур" Style="{StaticResource LibraryTextBlockStyle}"/>
+                <DataGridTextColumn Binding="{Binding Name}" Width="*" >
+                    <DataGridTextColumn.Header >
+                        <TextBlock Text="Библиотека культур" Style="{StaticResource LibraryTextBlockStyle}">
+                            
+                        </TextBlock>
                     </DataGridTextColumn.Header>
                 </DataGridTextColumn>
             </DataGrid.Columns>
